LIST OF CHANGES FOR NPG-QC PACKAGE

 - compile fastq_summ executable during the npg_qc build, skip
     compilation if samtools is not on the path
 - C code clean-up to remove warnings in compilation
 - SeqQC daemon to set CATALYST_HOME relative to bin so that
     the production user does not have to have this definition
 - SeqQC build optionally fetches javascript dependencies

release 57.12
 - Removing MQC logic from templates and moving it to JS
 - Adding a controller to provide MQC status for a run using REST
 - Adding a role to provide functionality for 401 responses
 - Validation for DWH->MQC outcome integrity during mqc for logged mqc-ing user
 - Fixing id-username data in test data to fix patches in controllers 
     which validate username

release 57.11
 - take into account old-style tag metrics results when deciding
     whether the lane has plexes
 - be compatible with latest changes to the db_connect role
 - ensure that tests do not access user's home directory

release 57.10
 - total_reads now returns 0 when num_total_reads is 0 rather than undef
 - add support for metrics files produced by bamstreamingmarkduplicates
 - npg_qc build for web server does not compile executables
 - functionality of the util package in SeqQC merged into the rpt_key autoqc role,
     the package removed
 - api::error package moved to Util::Error
 - using node-qunit-phantomjs to run headless tests
 - tests for basic functionality for mqc Javascript code
 - adding configuration for blanket
 - updating readme for changes in testing procedure

release 57.9
 - autoqc results collection class - add a method for inferring whether
     a lane has plexes from results themselves
 - SeqQC - steps towards making display of autoqc results and manual qc process
   independent of availability of warehouse data:
    - use the new collection method to decide whether to display a link to
       plex results (previously warehouse data were used for this)