@@ -1,5 +1,6 @@
 LIST OF CHANGES FOR NPG-QC PACKAGE
 
+ - skip running legacy gcbias if window_depth not available
  - compile fastq_summ executable during the npg_qc build, skip
      compilation if samtools is not on the path
  - C code clean-up to remove warnings in compilation
